--- a/app/src/main/res/layout/news_title_list_item.xml
+++ b/app/src/main/res/layout/news_title_list_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp"
-    android:id="@+id/main_layout"
+    android:layout_marginVertical="4dp"
     android:background="@drawable/news_title_shape"
-    android:layout_marginVertical="4dp">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,8 +17,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_titulo"
@@ -27,9 +26,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="8dp"
+                android:justificationMode="inter_word"
                 android:text="Título"
                 android:textAlignment="center"
-                android:justificationMode="inter_word"
                 android:textColor="@color/azul_20"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -43,17 +42,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/tv_autor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="8dp"
+                    android:layout_weight="1"
                     android:text="Autor: Autor"
                     android:textAlignment="textStart"
                     android:textColor="@color/black"
                     android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:layout_weight="1"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_fonte"
@@ -75,9 +75,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="4dp"
+                android:justificationMode="inter_word"
                 android:text="Descrição: aaaaa\naaaaaaa\naaaaaaaa\naaaaaaaa"
                 android:textAlignment="textStart"
-                android:justificationMode="inter_word"
                 android:textColor="@color/azul_40"
                 android:textSize="14sp"
                 android:textStyle="bold" />
@@ -89,27 +89,24 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:background="@color/azul_20">
+            android:background="@color/azul_20"
+            android:orientation="vertical"
+            android:padding="4dp">
+
             <ImageView
                 android:id="@+id/iv_article"
-                android:maxWidth="200dp"
-                android:minWidth="100dp"
-                android:maxHeight="300dp"
-                android:minHeight="150dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_launcher_foreground"
-                />
+                android:maxWidth="200dp"
+                android:maxHeight="300dp"
+                android:minWidth="100dp"
+                android:minHeight="100dp"
+                android:src="@drawable/ic_launcher_foreground" />
 
         </LinearLayout>
 
 
-
-
-
     </LinearLayout>
-
 
 
 </LinearLayout>
